[package]
name = "sqlx_1_5_7v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-codec = "0.5.0"
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-multipart = "0.4.0"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-server = "=2.0.0"
actix-web = { version = "4.0.1", features = ["openssl"] }
ahash = "=0.7.6"
async-trait = "=0.1.52"
base64 = "0.13.0"
clap = "=2.34.0"
cookie = "=0.16.0"
dotenv = "0.15"
dyn-clonable = "0.9.0"
encoding_rs = "0.8.30"
erased-serde = "0.3"
fnv = "=1.0.7"
form_urlencoded = { version = "1" }
futures = "0.3"
image = { version = "=0.24.4", default-features = false, features=["gif", "jpeg", "png", "bmp", "tiff"] }
lettre = "0.10.0-rc.4"
lettre_email = "0.9.4"
local-ip-address = "0.4.4"
mac_address = "1.1.2"
mime = "0.3.16"
native-tls = "0.2"
nom = "=7.1.0"
num-format = "0.4.0"
num-traits = "=0.2.14"
num_cpus = "=1.13.1"
once_cell = "1.8.0"
openssl = { version = "0.10" }
oracle = "0.5.3"
r2d2 = { version = "0.8.9" }
r2d2-oracle = { version = "0.5.0", features = ["chrono"] }
quote = "=1.0.35"
quick-xml = { version = "0.19", features = ["serialize"] }
rand = "=0.8.4"
regex = "=1.5.4"
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate"] }
rustls = { version = "0.20" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sha-1 = "0.9.8"
substring = "1.4.5"
tempfile = "=3.3.0"
thiserror = "=1.0.30"
threadpool = "=1.8.1"
time = { version = "0.3.5", features = ["macros", "serde"] }
tinyvec = "=1.5.1"
tokio = { version = "1", features = ["full"] }
typetag = "0.1.7"
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
url = "=2.2.2"
walkdir = "=2.3.2"
xlsxwriter = { version = "0.3.5" }
zip = "=0.6.2"

env_logger = "0.8"
log = "0.4"
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing = "0.1.34"
tracing-actix-web = { version = "0.5.1", features = ["opentelemetry_0_17"] }
tracing-bunyan-formatter = "0.3.2"
tracing-futures = "0.2.5"
tracing-opentelemetry = { version = "0.17.2" }
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter", "fmt", "std"] }

sqlx = { version = "0.5.10", features = [ "runtime-tokio-rustls", "postgres", "time", "uuid" ] }

# Therseare extra to make sure that things stay fixed after removal of known
# private deps.
calamine = "0.18.0"
tracing-appender = "0.2.2"
hex-literal = "0.3.4"

# Thisis the message broker which we NEED.
amqprs = "=1.5.3"

# These are deps we would like.
pdf = "=0.7.2"
docx-rs = "=0.4.5"
printpdf = "0.5.3"

# Test whether redis worksor not.
redis = {version = "=0.21.1", features = ["tokio-comp", "r2d2"] }
prometheus-client = "=0.18.1"

[patch.crates-io]
ahash = { git = "https://github.com/tkaitchuck/aHash.git", rev = "e77cab8" }